--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bafe
 spring.datasource.username=root
 spring.datasource.password=12345
+server.port= 8080
