--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/bafe
 spring.datasource.username=root
 spring.datasource.password=12345
+spring.jpa.hibernate.ddl-auto=none
 server.port=${PORT:8080}
